[gd_scene format=3 uid="uid://cq0456nebfdxi"]

[ext_resource type="Script" uid="uid://dsykc8glp6ena" path="res://card_maker/camera_controller.gd" id="1_c371m"]
[ext_resource type="Script" uid="uid://boei65gut0jib" path="res://card_maker/card_maker.gd" id="1_y4jyd"]
[ext_resource type="Script" uid="uid://dtgxrxfycg5ce" path="res://card_maker/menu_container.gd" id="2_h5agh"]
[ext_resource type="PackedScene" uid="uid://c83viscthosp4" path="res://card_maker/delete_menu/delete_menu.tscn" id="2_hc6fa"]
[ext_resource type="Texture2D" uid="uid://2pdnf51odotv" path="res://card_textures/empty_card_sprite.png" id="8_hc6fa"]

[sub_resource type="LabelSettings" id="LabelSettings_f5pdp"]
font_color = Color(0, 0, 0, 1)

[node name="CardMaker" type="Node2D" unique_id=834646800]
script = ExtResource("1_y4jyd")

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=1753650922]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer" unique_id=1974850130]
custom_minimum_size = Vector2(500, 0)
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/ColorRect" unique_id=849539420]
layout_mode = 0
offset_right = 500.0
offset_bottom = 648.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/ColorRect/MarginContainer" unique_id=1221069145]
layout_mode = 2

[node name="MainVBox" type="VBoxContainer" parent="CanvasLayer/ColorRect/MarginContainer/ScrollContainer" unique_id=1700691432]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2

[node name="Top Menu" type="HBoxContainer" parent="CanvasLayer/ColorRect/MarginContainer/ScrollContainer/MainVBox" unique_id=126985144]
layout_mode = 2

[node name="BackButton" type="Button" parent="CanvasLayer/ColorRect/MarginContainer/ScrollContainer/MainVBox/Top Menu" unique_id=772175450]
layout_mode = 2
text = "<"

[node name="MenuName" type="Label" parent="CanvasLayer/ColorRect/MarginContainer/ScrollContainer/MainVBox/Top Menu" unique_id=1765335954]
unique_name_in_owner = true
layout_mode = 2
text = "Empty Menu Name"
label_settings = SubResource("LabelSettings_f5pdp")

[node name="MenuContainer" type="MarginContainer" parent="CanvasLayer/ColorRect/MarginContainer/ScrollContainer/MainVBox" unique_id=1177026145]
layout_mode = 2
script = ExtResource("2_h5agh")

[node name="DeleteMenu" parent="CanvasLayer" unique_id=608963587 instance=ExtResource("2_hc6fa")]
unique_name_in_owner = true

[node name="Camera2D" type="Camera2D" parent="." unique_id=1256520342]
script = ExtResource("1_c371m")

[node name="CardBackground" type="Sprite2D" parent="." unique_id=2089007389]
unique_name_in_owner = true
position = Vector2(-187, 19)
texture = ExtResource("8_hc6fa")

[connection signal="pressed" from="CanvasLayer/ColorRect/MarginContainer/ScrollContainer/MainVBox/Top Menu/BackButton" to="CanvasLayer/ColorRect/MarginContainer/ScrollContainer/MainVBox/MenuContainer" method="_on_back_button_pressed"]
